Make H3 easier to recognize

--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -42,9 +42,9 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 13px;
     text-align: left;
-    color: black;
+    color: #444;
 }
 
 .preface {
