--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -74,12 +74,13 @@ h3 {
 /* page */
 #sitebox {
     width: 800px;
-    /* FIXME: this is not CSS valid */
-    float: center;
-    margin: 0 auto;
-    border: 4px solid black;
-    background: #f0f0f0;
+    margin: 40px auto 40px auto;
+    border: 0;
     padding: 0;
+    background: #f0f0f0;
+    box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
 }
 /* banner */
 #title {
