--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -22,10 +22,10 @@ body {
 }
 /* page */
 #page {
-	min-height: 600px;
-    background-color: rgba(255,255,255,0.3);
+	height: 600px;
+    background-color: rgba(0,0,0,0.6);
     box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 5px 20px 50px rgba(0, 0, 0, 0.4);
     padding: 10px;
     border-radius: 10px;
@@ -34,10 +34,8 @@ body {
 #main {
 	position: relative;
     border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 50px #448;
     background: #448;
-    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.4);
     margin: 20px;
     margin-left: 145px;
     margin-top: 60px;
@@ -82,13 +80,9 @@ body {
 #menu li a {
     margin-left: 7px;
 }
-/*
-#menu li a:hover {
-    text-decoration: underline;
-}
-*/
 #menu li.selected {
     background-color: #448;
+    -webkit-box-shadow: 0px 0px 50px #448;
     width: 140px;
 }
 
@@ -121,7 +115,7 @@ h1 {
 	top: -60px;
     font-size: 40px;
     color: #ddd;
-    text-shadow: 3px 5px 5px rgba(0, 0, 0, 0.4);
+    /*text-shadow: 0px 0px 10px rgba(68, 68, 136, 1.0);*/
 }
 #content h2, .mceContentBody h2 {
 	display: block;
