--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -82,8 +82,9 @@ body {
 }
 #menu li.selected {
     background-color: #448;
+    border-radius: 10px;
     -webkit-box-shadow: 0px 0px 50px #448;
-    width: 140px;
+    width: 150px;
 }
 
 
