Cleaning up bloated/outdated pages.

--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -1,7 +1,7 @@
 body {
     background: #000 url('bgs/fantasy_16.jpg') no-repeat;
     /* Sadly this is too slow: background-attachment: fixed; */
-    background-size: 100%;
+    background-position: center top;
     font-family: Verdana, Sans-Serif, sans;
     font-size: 13px;
     line-height: 140%;
