--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -95,11 +95,6 @@ body {
     width: 150px;
 }
 
-
-.picmargin {
-    margin-left: 250px;
-}
-
 .center {
 	text-align: center;
 }
@@ -160,6 +155,12 @@ h3 {
 	padding: 0.1em 0.4em;
 	font-size: 0.8em;
 	white-space: pre;
+}
+
+.thumb {
+	width: 128px;
+	margin-bottom: 30px;
+	-webkit-box-reflect:below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.6, transparent), to(rgba(255,255,255,0.3)));
 }
 
 .margin {
