--- a/htdocs-binary/style.css
+++ b/htdocs-binary/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #306;
+    background: #88d;
     background-position: center top;
     font-family: DejaVu Sans, Verdana, Sans-Serif, sans;
     font-size: 13px;
@@ -23,7 +23,7 @@ body {
 /* page */
 #page {
 	min-height: 600px;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
@@ -36,14 +36,15 @@ body {
 	position: relative;
     border-radius: 10px;
     -moz-border-radius: 10px;
-    box-shadow: 0px 0px 50px #448;
-    -webkit-box-shadow: 0px 0px 50px #448;
-    -moz-box-shadow: 0px 0px 50px #448;
-    background: #448;
+    box-shadow: 0px 0px 50px #000;
+    -webkit-box-shadow: 0px 0px 50px #000;
+    -moz-box-shadow: 0px 0px 50px #000;
+    background: #000;
     margin: 20px;
     margin-left: 145px;
     margin-top: 70px;
     padding: 20px 10px;
+    color: #ddd;
 }
 #content {
 	width: 640px;
@@ -85,12 +86,12 @@ body {
     margin-left: 7px;
 }
 #menu li.selected {
-    background-color: #448;
+    background-color: #000;
     border-radius: 10px;
     -moz-border-radius: 10px;
-    box-shadow: 0px 0px 50px #448;
-    -webkit-box-shadow: 0px 0px 50px #448;
-    -moz-box-shadow: 0px 0px 50px #448;
+    box-shadow: 0px 0px 50px #000;
+    -webkit-box-shadow: 0px 0px 50px #000;
+    -moz-box-shadow: 0px 0px 50px #000;
     width: 150px;
 }
 
@@ -114,8 +115,8 @@ a:hover, a:active {
     color: #aaf;
 }
 h1 {
-	position: absolute;
-	top: -70px;
+	/*position: absolute;
+	top: -70px;*/
     font-size: 40px;
     color: #ddd;
     /*text-shadow: 0px 0px 10px rgba(68, 68, 136, 1.0);*/
@@ -128,7 +129,7 @@ h1 {
 	margin-left: -10px;
 	padding: 10px;
 	width: 640px;
-	background: #336;
+	background: #333;
     font-size: 20px;
     text-align: left;
     /*text-decoration: underline;*/
@@ -152,7 +153,7 @@ h3 {
 	border-width: 0.2em;
 	border-style: solid;
 	border-color: #ddd #bbb #bbb #ddd;
-	background-color: #eee;
+	background-color: #000;
 	padding: 0.1em 0.4em;
 	font-size: 0.8em;
 	white-space: pre;
